--- a/form.html
+++ b/form.html
@@ -1,179 +1,180 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>resume form</title>
+	<title>Resume Form</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body id="form">
 	<div class="main">
-		<div class ="sub">
-		<h1>CARRER OBJECTIVE</h1>
-		<label for="carrer">
-		<select id="carrer" name="carrer">
-			<option> select carrer objective</option>
-			<option> to work in an environment where i can utilize my own ideas</option>
-			<option>to work in an mnc company</option>
-			<option>to work in product based company</option>
-		</select></label>
+		<h1>RESUME</h1>
+	<div class="sub">
+		<h1>Career objective</h1>
+    <label for="career">
+		<select id="career" name="career">
+			<option>Select your career objective</option>
+			<option>To work in an environment where I can utilize my skills</option>
+			<option>To work in a reputed company</option>
+		</select>
 	</div>
-	<div class="sub-1">
-		<h1>PERSONAL INFORMATION</h1>
-		<label for="name">
-		<input type="text" name="name" id="name" placeholder="enter your name"></label><br><br>
-		<label for="mobile">
-		<input type="number" name="mobile" id="mobile" placeholder="enter your mobile number"></label><br><br>
-		<label for="email">
-		<input type="text" name="email" id="email" placeholder="enter your email adress"></label>
-		
+	<div class="sub1">
+		<h1>Personal Information</h1>
+    <label for="name">
+		<input type="text" name="name"id="Name"placeholder="Enter Name"></label><br><br>
+    <label for="mobile">
+		<input type="text" name="mobile"id="Mobile"placeholder="Enter Mobile Number"></label><br><br>
+    <label for="mail">
+    <input type="text" name="mail"id="Mail"placeholder="Enter Your Mailid"></label>
 	</div>
-	<div class="sub-1">
-		<h1>PG DETAILS</h1>
-		<label for="Pdegree">
-		<select id="Pdegree" name="Pdegree">
-			<option> degree</option>
-			<option> M.tech</option>
-			<option>MCA</option>
-			<option> MSC</option>
-		</select></label><br><br>
-		<label for="Pinst">
-		<input type="text" name="Pinst" id="Pinst" placeholder="enter your inst name"></label><br><br>
-		<label for="Pper">
-		<input type="number" name="Pper" id="Pper" placeholder="enter your per"></label><br><br>
-		<label for="Pyop">
-		<input type="text" name="Pyop" id="Pyop" placeholder="enter your yop"></label>
-	</div>
-	<div class="sub-1">
-		<h1>GRADUATION DETAILS</h1>
-		<label for="gdegree">
-
-		<select id="gdegree" name="gdegree">
-			<option> degree</option>
-			<option> B.tech</option>
-		</select><br><br>
-		<label for="Ginst">
-		<input type="text" name="Ginst" id="Ginst" placeholder="enter your inst name"></label><br><br>
-		<label for="Gper">
-		<input type="number" name="Gper" id="Gper" placeholder="enter your per"></label><br><br>
-		<label for="Gyop">
-		<input type="text" name="Gyop" id="Gyop" placeholder="enter your yop"></label>
-	</div>
-	<div class="sub-1"> 
-		<h1>INTER DETAILS</h1>
-		<label for="Idegree">
-		<select id="Idegree" name="Idegree">
-			<option>degree</option>
-			<option>mpc</option>
-			<option>bipc</option>
-		</select></label><br><br>
-		<label for="Iinst">
-		<input type="text" name="Iinst" id="Iinst" placeholder="enter your inst name"></label><br><br>
-		<label for="Iper">
-		<input type="number" name="Iper" id="Iper" placeholder="enter your per"></label><br><br>
-		<label for="Iyop">
-		<input type="text" name="Iyop" id="Iyop" placeholder="enter your yop"></label>
-	</div>
-	<div class="sub-1">
-		<h2>SSC</h2>
-		<label for="Sdegree">
-		<select id="Sdegree" name="Sdegree">
-			<option>10TH DETAILS</option>
-			<option>SSC</option>
-		</select></label><br><br>
-		<label for="Sinst">
-		<input type="text" name="Sinst" id="Sinst" placeholder="enter your inst name"></label><br><br>
-		<label for="Sper">
-		<input type="number" name="Sper" id="Sper" placeholder="enter your per"></label><br><br>
-		<label for="Syop">
-		<input type="text" name="Syop" id="Syop" placeholder="enter your yop"></label>
-	</div>
+    <div class="sub1">
+    	<h2>PG Details</h2>
+      <label for="pdegree">
+    	<select id="pdegree" name="pdegree">
+    		<option>Degree</option>
+    		<option>M.tech</option>
+    		<option>MCA</option>
+    		<option>MBA</option>
+    		<option>MSc</option>
+    	</select></label><br><br>
+      <label for="pinstitute">
+    	<input type="text" name="pinstitute"id="PInstitute"placeholder="Enter Institute Name"></label><br><br>
+      <label for="pper">
+		<input type="number" name="pper"id="PPer"placeholder="Enter Percentage"></label><br><br>
+    <label for="pyear">
+		<input type="text" name="pyear"id="PYear"placeholder="Enter Year of Passing"></label>
+    </div>
+    <div class="sub1">
+    	<h2>Graduation Details</h2>
+      <label for="gdegree">
+    	<select id="gdegree" name="gdegree">
+    		<option>Degree</option>
+    		<option>B.tech</option>
+    		<option>BBM</option>
+    		<option>BSc</option>
+    	</select></label><br><br>
+      <label for="ginstitute">
+    	<input type="text" name="ginstitute"id="GInstitute"placeholder="Enter Institute Name"></label><br><br>
+      <label for="gper">
+		<input type="number" name="gper"id="GPer"placeholder="Enter Percentage"></label><br><br>
+    <label for="gyear">
+		<input type="text" name="gyear"id="GYear"placeholder="Enter Year of Passing"></label>
+    </div>
+    <div class="sub1">
+    	<h2>+2 Details</h2>
+      <label for="idegree">
+    	<select id="idegree" name="idegree">
+    		<option>Degree</option>
+    		<option>MPC</option>
+    		<option>BiPC</option>
+    	</select></label><br><br>
+      <label for="iinstitute">
+    	<input type="text" name="iinstitute"id="IInstitute"placeholder="Enter Institute Name"></label><br><br>
+      <label for="iper">
+		<input type="number" name="iper"id="IPer"placeholder="Enter Percentage"></label><br><br>
+    <label for="iyear">
+		<input type="text" name="iyear"id="IYear"placeholder="Enter Year of Passing"></label>
+    </div>
+    <div class="sub1">
+    	<h2>10th Details</h2>
+      <label for="sdegree">
+    	<select id="sdegree" name="sdegree">
+    		<option>Degree</option>
+    		<option>SSC</option>
+    		<option>CBSE</option>
+    		<option>ICSE</option>
+    	</select></label><br><br>
+      <label for="sinstitute">
+    	<input type="text" name="sinstitute"id="SInstitute"placeholder="Enter Institute Name"></label><br><br>
+      <label for="sper">
+		<input type="number" name="sper"id="SPer"placeholder="Enter Percentage"></label><br><br>
+    <label for="syear">
+		<input type="text" name="syear"id="SYear"placeholder="Enter Year of Passing"></label>
+    </div>
 </div>
-<button type="button" id="button" name="button" onclick="submitdata()">submit</button>
+<button type="button" id="button" name="button" onclick="submitdata()">Submit</button>
 </body>
-</html>
+</html> 
 <script type="text/javascript">
-	function submitdata() {
-var carrer=document.getElementById("carrer").value;
-var name=document.getElementById("name").value;
-var mobile=document.getElementById("mobile").value;
-var email=document.getElementById("email").value;
+    function submitdata(){
+    var career=document.getElementById("career").value;
+    var name=document.getElementById("Name").value;
+    var mobile=document.getElementById("Mobile").value;
+    var email=document.getElementById("Mail").value;
 
-var Pdegree=document.getElementById("Pdegree").value;
-var Pinst=document.getElementById("Pinst").value;
-var Pper=document.getElementById("Pper").value;
-var Pyop=document.getElementById("Pyop").value;
+    var pdegree=document.getElementById("pdegree").value;
+    var pinstitute=document.getElementById("PInstitute").value;
+    var pper=document.getElementById("PPer").value;
+    var pyear=document.getElementById("PYear").value;
 
-var gdegree=document.getElementById("gdegree").value;
-var Ginst=document.getElementById("Ginst").value;
-var Gper=document.getElementById("Gper").value;	
-var Gyop=document.getElementById("Gyop").value;
+    var gdegree=document.getElementById("gdegree").value;
+    var ginstitute=document.getElementById("GInstitute").value;
+    var gper=document.getElementById("GPer").value;
+    var gyear=document.getElementById("GYear").value;
 
-var Idegree=document.getElementById("Idegree").value;
-var Iinst=document.getElementById("Iinst").value;
-var Iper=document.getElementById("Iper").value;	
-var Iyop=document.getElementById("Iyop").value;
+    var idegree=document.getElementById("idegree").value;
+    var iinstitute=document.getElementById("IInstitute").value;
+    var iper=document.getElementById("IPer").value;
+    var iyear=document.getElementById("IYear").value;
 
-var Sdegree=document.getElementById("Sdegree").value;
-var Sinst=document.getElementById("Sinst").value;
-var Sper=document.getElementById("Sper").value;	
-var Syop=document.getElementById("Syop").value;
+   var sdegree=document.getElementById("sdegree").value;
+   var sinstitute=document.getElementById("SInstitute").value;
+   var sper=document.getElementById("SPer").value;
+   var syear=document.getElementById("SYear").value;
+var indexedDB = window.indexedDB || window.mozIndexedDB || window.
+      msIndexedDB || window.webkitIndexedDB;
 
-var indexedDB=window.indexedDB || window.mozIndexedDB ||window.msIndexedDB ||window.webkitIndexedDB;
+      indexedDB?console.log("success"):console.log("error");
 var store;
 var open;
 var result;
 var tx;
-var request=indexedDB.open("database",1);
-request.onupgradeneeded=function(e) {
-  open=e.target.result;
- store=open.createObjectStore("resumedata",{keyPath:"name"});
-
+      var request=indexedDB.open("database",1);
+      request.onupgradeneeded=function(e){
+        open = e.target.result;
+        store = open.createObjectStore("resumedata",{keyPath:"name"});
 
 }
-request.onerror=function(e) {
-	console.log("error"+e);
+request.onerror=function(e){
+    console.log("error"+e);
 }
-request.onsuccess=function(e) {
-  open = e.target.result;
-  tx =open.transaction("resumedata",'readwrite');
-  store = tx.objectStore("resumedata");
-  store.put({
-	carrer:carrer,
-	name:name,
-	mobile:mobile,
-	email:email,
-	education:[
-	{
-      degree:Pdegree,
-      inst:Pinst,
-      per:Pper,
-      yop:Pyop
-	},
-	{
-      degree:gdegree,
-      inst:Ginst,
-      per:Gper,
-      yop:Gyop
-	},
-	{
-		degree:Idegree,
-		inst:Iinst,
-		per:Iper,
-		yop:Iyop
-	},
-	{
-		degree:Sdegree,
-		inst:Sinst,
-		per:Sper,
-		yop:Syop
-	}]
+request.onsuccess=function(e){
+    open = e.target.result;
+
+    tx = open.transaction("resumedata",'readwrite');
+    store = tx.objectStore("resumedata");
+store.put({
+
+    career:career,
+    name:name,
+    mobile:mobile,
+    email:email,
+    education:[
+{
+     degree:pdegree,
+     institute:pinstitute,
+     per:pper,
+     year:pyear
+ },
+ {
+     degree:gdegree,
+     institute:ginstitute,
+     per:gper,
+     year:gyear
+ },
+ {
+     degree:idegree,
+     institute:iinstitute,
+     per:iper,
+     year:iyear
+},
+ {
+    degree:sdegree,
+    institute:sinstitute,
+    per:sper,
+    year:syear
+ }
+ ]
 });
-	
 }
-window.open("index1.html","_self");
-
-
-
+window.open("index.html","_self");
 }
-
 </script>
