--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<h1>RESUME BULIDING</h1>
 		</div>
     <div id="second">
-    	<a href="form.html"><img src="Images/add.svg" width="110" height="110"></a>
+    	<a href="form.html"><img src="Images/plus.jpg" width="110" height="110"></a>
     </div>
    
 </body>
