--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@ var left=document.querySelector(".leftdiv");
 var right=document.querySelector(".rightdiv");
 function display(d){
 	var image=document.createElement("img");
-	image.src="Images/profile.png";
+	image.src="Images/plus.jpg";
 	left.append(image);
 	var head1=document.createElement("h2");
 	head1.textContent=d.name;
